@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Documentation, fix indentation. No functional change.
+server/ban.c build_map.c
+Nicolas Weeger 2007-05-29
+
 lib/formulae: fix bug #1726561: formulae for potion_heal needs supreme potion of life.
 Nicolas Weeger 2007-05-28
 
